production/tools/tests/gaiat/arrays_test01.ruleset
/////////////////////////////////////////////
// Copyright (c) Gaia Platform LLC
// All rights reserved.
/////////////////////////////////////////////

// RUN: not %gaiat %s -- 2>&1| FileCheck  %s

// TESTCASE: attempt two subscripts in single-dimentional array
ruleset test01
{
    on_insert(farmer)
    {
        yield.previous_years[0][0] = 5;
    }
}

// CHECK: error: subscripted value is not an array, pointer, or vector
